Make a dummy plugin

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 name = "jimtel"
 version = "0.1.0"
 authors = ["youxkei <youxkei@gmail.com>"]
+license = "CC0 1.0"
 edition = "2018"
 
+[lib]
+crate-type = ["cdylib"]
+
 [dependencies]
+lv2 = "0.6.0"
