--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,14 @@ authors = ["youxkei <youxkei@gmail.com>"]
 license = "CC0 1.0"
 edition = "2018"
 
-[lib]
-crate-type = ["cdylib"]
+#[lib]
+#crate-type = ["cdylib"]
 
 [dependencies]
-lv2 = "0.6.0"
-itertools = "0.10.0"
+#lv2 = "0.6.0"
+#itertools = "0.10.0"
+
+[workspace]
+members = [
+  "limiter"
+]
