--- a/limiter/Cargo.toml
+++ b/limiter/Cargo.toml
@@ -9,3 +9,5 @@ crate-type = ["cdylib"]
 [dependencies]
 vst = "0.2.1"
 itertools = "0.10.0"
+jimtel = { path = ".." }
+params = { path = "../params" }
