--- a/loudness_limiter/Cargo.toml
+++ b/loudness_limiter/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2018"
 crate-type = ["cdylib"]
 
 [dependencies]
-vst = "0.2.1"
-itertools = "0.10.0"
+serde = { version = "1.0", features = ["derive"] }
+baseplug = { git = "https://github.com/wrl/baseplug.git", branch="trunk" }
 jimtel = { path = ".." }
-params = { path = "../params" }
