--- a/loudness_limiter/Cargo.toml
+++ b/loudness_limiter/Cargo.toml
@@ -9,4 +9,6 @@ crate-type = ["cdylib"]
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 baseplug = { git = "https://github.com/wrl/baseplug.git", branch="trunk" }
+baseview = { git = "https://github.com/RustAudio/baseview.git", branch="master" }
+iced_baseview = { git = "https://github.com/BillyDM/iced_baseview", branch="main", features=["canvas"] }
 jimtel = { path = ".." }
