--- a/loudness_limiter/Cargo.toml
+++ b/loudness_limiter/Cargo.toml
@@ -7,8 +7,9 @@ edition = "2018"
 crate-type = ["cdylib"]
 
 [dependencies]
-serde = { version = "1.0", features = ["derive"] }
-baseplug = { git = "https://github.com/wrl/baseplug.git", branch="trunk" }
+vst = "0.2.1"
+itertools = "0.10.0"
 baseview = { git = "https://github.com/RustAudio/baseview.git", branch="master" }
 iced_baseview = { git = "https://github.com/BillyDM/iced_baseview", branch="main", features=["canvas"] }
 jimtel = { path = ".." }
+params = { path = "../params" }
