--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,9 +38,7 @@
                 {
                     name: "Install Dependencies",
                     if: "matrix.os == 'ubuntu-latest'",
-                    run: "
-                        sudo apt install -qq cmake libx11-dev libxcb-icccm4-dev libx11-xcb-dev libxcb-dri2-0-dev libxcursor-dev libfreetype6-dev libexpat1-dev libxmltok1-dev
-                    ",
+                    run: "sudo apt update && sudo apt install -qq libgl-dev libxcursor-dev libx11-xcb-dev libxcb-icccm4-dev libxcb-dri2-0-dev libxcb-render0-dev libxcb-shape0-dev libxcb-xfixes0-dev",
                 },
                 {
                     name: "Build for Linux",
