Use fixed scale factor

--- a/loudness_limiter/Cargo.toml
+++ b/loudness_limiter/Cargo.toml
@@ -16,3 +16,4 @@ jimtel = { path = ".." }
 params_derive = { path = "../params_derive" }
 raw-window-handle = "0.3.3"
 rmp-serde = "0.15.4"
+epaint = "0.12.0"
