--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,10 @@ edition = "2018"
 [dependencies]
 vst = "0.2.1"
 raw-window-handle = "0.3.3"
+baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "d399c1275522ae75f5a82caadd904df2685c8660" }
+egui-baseview = { git = "https://github.com/BillyDM/egui-baseview", rev = "c17f556fdc8b5d9278de473f6de6534c67cedf65" }
+egui = "0.12.0"
+epaint = "0.12.0"
 
 [workspace]
 members = [
