--- a/loudness_ceiling/Cargo.toml
+++ b/loudness_ceiling/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "loudness_ceiling"
-version = "0.0.0"
-edition = "2018"
+version.workspace = true
+authors.workspace = true
+license.workspace = true
+edition.workspace = true
+repository.workspace = true
 
 [lib]
 crate-type = ["cdylib"]
