--- a/params_derive/Cargo.toml
+++ b/params_derive/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "params_derive"
-version = "0.0.0"
-edition = "2018"
+version.workspace = true
+authors.workspace = true
+license.workspace = true
+edition.workspace = true
+repository.workspace = true
 
 [lib]
 proc-macro = true
