--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@
         build: {
             strategy: {
                 matrix: {
-                    os: ["ubuntu-latest", "windows-latest", "macOS-latest"],
+                    os: ["ubuntu-latest", "windows-latest", "macos-latest"],
                     rust: ["nightly"],
                 },
             },
