--- a/loudness_limiter/Cargo.toml
+++ b/loudness_limiter/Cargo.toml
@@ -10,9 +10,8 @@ repository.workspace = true
 crate-type = ["cdylib"]
 
 [dependencies]
-vst = "0.2.1"
+vst.workspace = true
 itertools = "0.10.0"
-raw-window-handle = "0.3.3"
 rmp-serde = "0.15.4"
 jimtel = { path = ".." }
 params_derive = { path = "../params_derive" }
